--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,9 +1,19 @@
+# Global settings: worker processes, HTTP configuration, log management etc.
+
 # Define the user under which the Nginx process runs
 user nginx;
 
 # Automatically determine number of worker processes based on CPU cores
 worker_processes auto;
 
+# Specify location of error log and its log level (notice, warn, error)
+error_log /var/log/nginx/error.log notice;
+
+# Specify file to store NGINX master process PID
+pid /var/run/nginx.pid;
+
+
+# Event-related configurations
 events {
 	# Set the maximum number of simultaneous connections for each worker process
 	worker_connections 1024;
@@ -21,4 +31,13 @@ http {
 	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
 		'$status $body_bytes_sent "$http_referer" '
 		'"$http_user_agent" "$http_x_forwarded_for"';
+
+	# Specify location of the access log file
+	access_log /var/log/nginx/access.log main;
+
+	# TLS configuration for HTTPS connections
+	ssl_protocols TLSv1.2 TLSv1.3; # Enable only secure protocols
+
+	# Include all configuration files in the /etc/nginx/conf.d directory
+	include /etc/nginx/conf.d/*.conf; # Include default.conf
 }
