--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,9 @@
 DOMAIN_NAME=eahn.42.fr  # TBD
 PATH_SSL_KEY=/etc/nginx/ssl/server.key
 PATH_SSL_CERTS=/etc/nginx/ssl/server.crt
+
+# MariaDB
+DB_NAME=my_database
+DB_USER=my_user
+DB_PASSWORD=my_password
+DB_ROOT_PASSWORD=my_root_password
