--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,15 @@
-DOMAIN_NAME=eahn.42.fr  # TBD
-PATH_SSL_KEY=/etc/nginx/ssl/server.key
+DOMAIN_NAME=eahn.42.fr
 PATH_SSL_CERTS=/etc/nginx/ssl/server.crt
+PATH_SSL_KEY=/etc/nginx/ssl/server.key
 
 # MariaDB
+DB_HOST=mariadb
 DB_NAME=my_database
 DB_USER=my_user
 DB_PASSWORD=my_password
 DB_ROOT_PASSWORD=my_root_password
+
+# WordPress settings
+WP_ADMIN_USER=admin
+WP_ADMIN_PASSWORD=very_secure_password
+WP_ADMIN_EMAIL=admin@example.com
