--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,21 +1,19 @@
-# Nginx image with alpine base image (Penultimate version)
+# Use a lightweight and secure base image
 FROM alpine:3.20
 
 # Install necessary packages
-RUN apk update && apk add --no-cache nginx openssl
+RUN apk add --no-cache nginx openssl
 
-# Copy TLS setup script into the container
+# Copy initialization script and configuration files
 COPY ./tools/nginx_init.sh /tmp/nginx_init.sh
+COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
 
 # Change permissions of the script
 RUN chmod +x /tmp/nginx_init.sh
 
-# Copy custom NGINX configuration file
-COPY ./conf/nginx.conf /etc/nginx/nginx.conf
-COPY ./conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
-
 # Expose HTTPS port
 EXPOSE 443
 
-# Launch the initialization script
+# Set the container's entry point
 CMD ["/tmp/nginx_init.sh"]
