--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -3,21 +3,29 @@
 server {
 	# Listen for HTTPS requests on port 443
 	listen 443 ssl;
-
+	listen [::]:443 ssl;
 	# Define the domain name for the server
-	server_name localhost; # To be replaced with actual domain name and add mapping in /etc/hosts
+	server_name eahn.42.fr www.eahn.42.fr; # To be replaced with actual domain name and add mapping in /etc/hosts
 
 	# Use environment variable for SSL certificate and key
-	ssl_certificate ${PATH_SSL_CERTS};
-	ssl_certificate_key ${PATH_SSL_KEY};
+	ssl_certificate	/etc/nginx/ssl/server.crt;
+    ssl_certificate_key	/etc/nginx/ssl/server.key;
 
 	# Set the root directory for WordPress and default index file
 	root /var/www/wordpress;
-	index index.php index.html index.htm;
+	index index.php index.html index.htm index.nginx-debian.html;
 
 	# Handle requests to the root directory
 	location / {
 		try_files $uri $uri/ /index.php?$args; # Fallback to WordPress index.php
+	}
+
+	# PHP-FPM configuration for processing PHP files
+	location ~ \.php$ {
+		include fastcgi_params; # Include default FastCGI parameters
+		fastcgi_pass wordpress:9000; # Pass PHP requests to the WordPress container
+		fastcgi_index index.php; # Handle default PHP file
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; # Pass the PHP file's actual path
 	}
 
 	# Define custom error page for 500-series errors
@@ -26,16 +34,10 @@ server {
 		root /usr/share/nginx/html; # Serve error page from default HTML directory
 	}
 
-	# PHP-FPM configuration for processing PHP files
-	location ~ \.php$ {
-		fastcgi_pass wordpress:9000; # Pass PHP requests to the WordPress container
-		fastcgi_index index.php; # Handle default PHP file
-		include fastcgi_params; # Include default FastCGI parameters
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; # Pass the PHP file's actual path
-	}
-
 	# Deny access to hidden files for security
 	location ~ /\. {
-		deny all; 
+    	deny all;
+   		access_log off;
+    	log_not_found off;
 	}
 }
