--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,32 +12,28 @@ error_log /var/log/nginx/error.log notice;
 # Specify file to store NGINX master process PID
 pid /var/run/nginx.pid;
 
-
 # Event-related configurations
 events {
-	# Set the maximum number of simultaneous connections for each worker process
-	worker_connections 1024;
+    worker_connections 1024;
 }
 
 # HTTP server settings
 http {
-	# Include MIME types to handle different content type (e.g. HTML, CSS, JS)
-	include /etc/nginx/mime.types;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-	# Default MIME type if none is specified
-	default_type application/octet-stream;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
 
-	# Define the log format for access logs
-	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-		'$status $body_bytes_sent "$http_referer" '
-		'"$http_user_agent" "$http_x_forwarded_for"';
+    ssl_protocols TLSv1.2 TLSv1.3;
 
-	# Specify location of the access log file
-	access_log /var/log/nginx/access.log main;
+    ssl_session_timeout 1h;
+    
+	sendfile        on;
 
-	# TLS configuration for HTTPS connections
-	ssl_protocols TLSv1.2 TLSv1.3; # Enable only secure protocols
+    keepalive_timeout  65;
 
-	# Include all configuration files in the /etc/nginx/conf.d directory
-	include /etc/nginx/conf.d/*.conf; # Include default.conf
+    include /etc/nginx/conf.d/*.conf;
 }
