--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,41 +1,36 @@
-version: "3.8"
+# version: "3.8"
 
 # default network: bridge
-networks:
-    default:
-        driver: bridge
 
 services:    
     nginx:
+        container_name: nginx
         depends_on:
             - wordpress
         image: nginx:eahn # eahn is the tag of the image
         build: 
             context: ./requirements/nginx
             dockerfile: Dockerfile
-        container_name: nginx
+        environment:
+            PATH_SSL_CERTS: /etc/nginx/ssl/server.crt
         ports:
             - "443:443"
         volumes:
-            - wordpress:/var/www/html
-        networks:
-            - default
+            - wp:/var/www/html
         env_file:
             - .env
         restart: always
 
     wordpress:
+        container_name: wordpress
         depends_on:
             - mariadb
         image: wordpress:eahn
         build:
             context: ./requirements/wordpress
             dockerfile: Dockerfile
-        container_name: wordpress
         volumes:
-            - wordpress:/var/www/html
-        networks:
-            - default
+            - wp:/var/www/html
         env_file:
             - .env
         restart: always
@@ -47,23 +42,19 @@ services:
             context: ./requirements/mariadb
             dockerfile: Dockerfile
         volumes:
-            - mariadb:/var/lib/mysql
-        networks:
-            - default
+            - db:/var/lib/mysql
         env_file:
             - .env
         restart: always
 
 volumes:
-    wordpress:
-        driver: local
+    wp:
         driver_opts:
-            device: /Users/eunsu/data/wordpress # Should create folders and change path when using it at school (mkdir -p ..)
+            device: /Users/eunsu/data/wp # Should create folders (data/wp) and change path when using it at school (mkdir -p ..)
             type: none
-            o: bind
-    mariadb:
-        driver: local
+            o: "bind"
+    db:
         driver_opts:
-            device: /Users/eunsu/data/mariadb # Should create folders and change path when using it at school (mkdir -p ..) -p means parent
+            device: /Users/eunsu/data/db # Should create folders (data/db) and change path when using it at school (mkdir -p ..) -p means parent
             type: none
-            o: bind
+            o: "bind"
