--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,10 @@
 # version: "3.8"
 
 # default network: bridge
+networks:
+  inception:
+    name: inception
+    driver: bridge
 
 services:    
     nginx:
@@ -19,7 +23,8 @@ services:
             - wp:/var/www/html
         env_file:
             - .env
-        restart: always
+        networks:
+            - inception
 
     wordpress:
         container_name: wordpress
@@ -33,7 +38,8 @@ services:
             - wp:/var/www/html
         env_file:
             - .env
-        restart: always
+        networks:
+            - inception
 
     mariadb:
         container_name: mariadb
@@ -45,7 +51,8 @@ services:
             - db:/var/lib/mysql
         env_file:
             - .env
-        restart: always
+        networks:
+            - inception
 
 volumes:
     wp:
