--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,67 +1,68 @@
-# version: "3.8"
 
-# default network: bridge
 networks:
   inception:
     name: inception
     driver: bridge
 
-services:    
-    nginx:
-        container_name: nginx
-        depends_on:
-            - wordpress
-        image: nginx:eahn # eahn is the tag of the image
-        build: 
-            context: ./requirements/nginx
-            dockerfile: Dockerfile
-        environment:
-            PATH_SSL_CERTS: /etc/nginx/ssl/server.crt
-        ports:
-            - "443:443"
-        volumes:
-            - wp:/var/www/html
-        env_file:
-            - .env
-        networks:
-            - inception
+services:
+  mariadb:
+    container_name: mariadb
+    image: mariadb:eahn
+    build:
+      context: ./requirements/mariadb/
+    env_file:
+      - .env
+    networks:
+      - inception
+    volumes:
+      - database:/var/lib/mysql
+    restart: always
 
-    wordpress:
-        container_name: wordpress
-        depends_on:
-            - mariadb
-        image: wordpress:eahn
-        build:
-            context: ./requirements/wordpress
-            dockerfile: Dockerfile
-        volumes:
-            - wp:/var/www/html
-        env_file:
-            - .env
-        networks:
-            - inception
+  wordpress:
+    depends_on:
+      - mariadb
+    container_name: wordpress
+    image: wordpress:eahn
+    build:
+      context: ./requirements/wordpress/
+    env_file:
+      - .env
+    networks:
+      - inception
+    volumes:
+     - wordpress:/var/www/wordpress
+    restart: always
 
-    mariadb:
-        container_name: mariadb
-        image: mariadb:eahn
-        build:
-            context: ./requirements/mariadb
-            dockerfile: Dockerfile
-        volumes:
-            - db:/var/lib/mysql
-        env_file:
-            - .env
-        networks:
-            - inception
+
+  nginx:
+    depends_on:
+      - wordpress
+    container_name: nginx
+    image: nginx:eahn
+    build:
+      context: ./requirements/nginx/
+    env_file:
+      - .env
+    ports:
+      - "443:443"
+    networks:
+      - inception
+    volumes:
+      - wordpress:/var/www/wordpress
+    restart: always
 
 volumes:
-    wp:
-        driver_opts:
-            device: /Users/eahn/data/wp # Should create folders (data/wp) and change path when using it at school (mkdir -p ..)
-            type: none
-            o: "bind"
-    db:
-        driver_opts:
-            device: /Users/eahn/data/db # Should create folders (data/db) and change path when using it at school (mkdir -p ..) -p means parent
-            type: none
-            o: "bind"
+  database:
+    name: database
+    driver: local
+    driver_opts:
+      o: "bind"
+      type: none
+      device: /Users/eunsu/data/database
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      o: "bind"
+      type: none
+      device: /Users/eunsu/data/wordpress
