--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -1,13 +1,16 @@
 # General configuration for MariaDB
 
 # Client and server shared settings (if applicable)
+# 3306: Default MariaDB server
 [clinet-server]
-port=3306 # Default MariaDB server
+port=3306
 
 # Server-specified settings
+# Run the server as the MySQL user
+# Directory where MariaDB data is stored
 [mysqld]
-user=mysql # Run the server as the MySQL user
-datadir=/var/lib/mysql # Directory where MariaDB data is stored
+user=mysql
+datadir=/var/lib/mysql
 
 # Optimize performance and ensure proper security
 skip-host-cache 
