--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -4,6 +4,7 @@ server {
 	# Listen for HTTPS requests on port 443
 	listen 443 ssl;
 	listen [::]:443 ssl;
+
 	# Define the domain name for the server
 	server_name eahn.42.fr www.eahn.42.fr; # To be replaced with actual domain name and add mapping in /etc/hosts
 
@@ -13,7 +14,7 @@ server {
 
 	# Set the root directory for WordPress and default index file
 	root /var/www/wordpress;
-	index index.php index.html index.htm index.nginx-debian.html;
+	index index.php index.html index.htm;
 
 	# Handle requests to the root directory
 	location / {
@@ -26,6 +27,9 @@ server {
 		fastcgi_pass wordpress:9000; # Pass PHP requests to the WordPress container
 		fastcgi_index index.php; # Handle default PHP file
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; # Pass the PHP file's actual path
+		fastcgi_intercept_errors on;
+		fastcgi_split_path_info ^(.+?\.php)(.*)$;
+		fastcgi_param   PATH_INFO $fastcgi_path_info;
 	}
 
 	# Define custom error page for 500-series errors
