--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -8,7 +8,7 @@ server {
 	# Define the domain name for the server
 	server_name eahn.42.fr www.eahn.42.fr; # To be replaced with actual domain name and add mapping in /etc/hosts
 
-	# Use environment variable for SSL certificate and key
+	# SSL certificate and key
 	ssl_certificate	/etc/nginx/ssl/server.crt;
     ssl_certificate_key	/etc/nginx/ssl/server.key;
 
